--- a/product_category/khong_gian.html
+++ b/product_category/khong_gian.html
@@ -80,9 +80,9 @@
                             </div>
                             <ul class="list_portfolio ps-0">
                                 <li class="items-product"  ><a href="../website/product.html" class="txt-porduct">Bàn thờ đẹp</a></li>
-                                <li class="items-product" style="background-color: #bd7071;"><a href="./do_tho.html" class="txt-porduct" style="color: #fff;">Đồ thờ</a></li>
+                                <li class="items-product" ><a href="./do_tho.html" class="txt-porduct" >Đồ thờ</a></li>
                                 <li class="items-product"><a href="./den_tho_rem.html" class="txt-porduct">Đèn thờ, Rèm che bàn thờ</a></li>
-                                <li class="items-product"><a href="./khong_gian.html" class="txt-porduct">Không gian phòng thờ</a></li>
+                                <li class="items-product" style="background-color: #bd7071;"><a href="./khong_gian.html" class="txt-porduct" style="color: #fff;">Không gian phòng thờ</a></li>
                                 <li class="items-product"><a href="./vat_pham.html" class="txt-porduct">Vật phẩm phong thủy</a></li>
                             </ul>
                         </div>
